objects/nFORCE__Business_Activity_Conditional__c.object
<CustomObject>
    <description>This object represents the connections between business activities in a business process.</description>
    <fields>
        <fullName>nFORCE__Conditional_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The user populates this required lookup field with the business activity parent record that this business activity is associated with.</description>
        <inlineHelpText>This lookup field indicates the parent business activity associated with the business activity.</inlineHelpText>
        <label>Conditional From</label>
        <referenceTo>nFORCE__Business_Activity__c</referenceTo>
        <relationshipLabel>Conditional To</relationshipLabel>
        <relationshipName>Conditional_From</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The user populates this required lookup field with the child business activity record that the business activity is associated with.</description>
        <inlineHelpText>This lookup field indicates the child business activity associated with the business activity.</inlineHelpText>
        <label>Conditional To</label>
        <referenceTo>nFORCE__Business_Activity__c</referenceTo>
        <relationshipLabel>Conditional From</relationshipLabel>
        <relationshipName>Conditional_To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_Type__c</fullName>
        <description>The user populates this required picklist field with the conditional type that indicates the circumstances under which the business activity is called.  By default, this value is set to Success Conditional.</description>
        <inlineHelpText>This system-populated field indicates the conditional type of the business activity.</inlineHelpText>
        <label>Conditional Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success Conditional</fullName>
                    <default>true</default>
                    <label>Success Conditional</label>
                </value>
                <value>
                    <fullName>Error Conditional</fullName>
                </value>
                <value>
                    <fullName>Finalizer Success Conditional</fullName>
                </value>
                <value>
                    <fullName>Finalizer Error Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>This field contains an external identifier that is used to associate the record with the correlating record in an external system. The Lookup Key can also be used to identify related records when importing data into nCino without the need to know the internal ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID for the Business Activity Conditional.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Activity Conditional</label>
    <nameField>
        <displayFormat>BAC-{00000000}</displayFormat>
        <label>Business Activity Conditional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Activity Conditionals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>